--- a/app/src/main/res/layout/activity_instruction.xml
+++ b/app/src/main/res/layout/activity_instruction.xml
@@ -5,12 +5,43 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingTop="86dp"
+    android:background="@android:color/white"
     tools:context="com.hancheng.privatewords.activities.InstructionActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/squirrel_icon"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:src="@drawable/squirrel"
+        android:layout_alignParentTop="true"
+        android:layout_centerInParent="true"
+        android:contentDescription="@string/squirrel" />
+
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:paddingTop="20dp"
+        android:layout_below="@id/squirrel_icon">
+
+        <com.hancheng.privatewords.views.RobotoTextView
+            android:id="@+id/entry_string"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_curious_world"
+            android:textSize="20sp"/>
+
+        <Button
+            android:id="@+id/click_to_enter_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_below="@id/entry_string"
+            android:layout_centerHorizontal="true" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
+
