--- a/app/src/main/res/layout/activity_private_words_results.xml
+++ b/app/src/main/res/layout/activity_private_words_results.xml
@@ -1,11 +1,22 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/results_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hancheng.privatewords.activities.PrivateWordsResultsActivity">
+    tools:context="com.hancheng.privatewords.activities.PrivateWordsResultsActivity"
+    android:orientation="vertical">
 
-</RelativeLayout>
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/pager_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="48dip"
+        android:background="@color/instruction_background_color" />
+
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent" />
+
+
+
+</LinearLayout>
