--- a/app/src/main/res/layout/results_item_row.xml
+++ b/app/src/main/res/layout/results_item_row.xml
@@ -2,11 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="30dp"
-    android:layout_marginLeft="26dp"
-    android:layout_marginStart="26dp"
-    android:layout_marginRight="16dp"
-    android:layout_marginEnd="16dp"
     android:orientation="vertical">
 
     <LinearLayout
@@ -58,8 +53,31 @@
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/user_name"
             android:layout_toEndOf="@id/user_name"
+            android:layout_marginLeft="15dp"
+            android:layout_marginStart="15dp"
             android:textColor="@color/message_content_underneath_grey"
             android:textSize="12sp" />
+
+        <ImageView
+            android:id="@+id/comments_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/post_time_elapsed"
+            android:layout_toEndOf="@id/post_time_elapsed"
+            android:layout_marginLeft="25dp"
+            android:layout_marginStart="25dp"
+            android:src="@drawable/comments_icon"/>
+
+        <TextView
+            android:id="@+id/comments_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/message_content_underneath_grey"
+            android:textSize="12sp"
+            android:layout_toRightOf="@id/comments_icon"
+            android:layout_toEndOf="@id/comments_icon"
+            android:layout_marginLeft="5dp"
+            android:layout_marginStart="5dp" />
 
         <ImageView
             android:id="@+id/posted_icon"
