--- a/app/src/main/res/layout/activity_private_words_results.xml
+++ b/app/src/main/res/layout/activity_private_words_results.xml
@@ -1,22 +1,26 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/results_root_view"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     tools:context="com.hancheng.privatewords.activities.PrivateWordsResultsActivity"
-    android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" >
 
-    <com.astuetz.PagerSlidingTabStrip
-        android:id="@+id/pager_tabs"
-        android:layout_width="match_parent"
-        android:layout_height="48dip"
-        android:background="@color/instruction_background_color" />
-
-    <android.support.v4.view.ViewPager
-        android:id="@+id/pager"
+    <LinearLayout
+        android:id="@+id/results_root_view"
         android:layout_height="match_parent"
-        android:layout_width="match_parent" />
+        android:layout_width="match_parent"
+        android:orientation="vertical">
 
+        <com.astuetz.PagerSlidingTabStrip
+            android:id="@+id/pager_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="48dip"
+            android:background="@color/instruction_background_color" />
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent" />
 
-</LinearLayout>
+    </LinearLayout>
+
+</FrameLayout>
